--- a/src/styles/AddGame.css
+++ b/src/styles/AddGame.css
@@ -16,8 +16,9 @@ input {
 
 button {
   padding: 10px;
-  background-color: #007bff;
+  background-color: #168f8d;
   color: white;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
